2009-12-09  Werner Koch  <wk@g10code.com>

	* config.links: Remove asm modules for all sparc64.  This is
	debian#560028.

2009-05-26  Werner Koch  <wk@g10code.com>

	* mpicoder.c (mpi_read_from_buffer): Allow zero-sized MPIs (i.e a
	zero).

2009-02-16  Werner Koch  <wk@g10code.com>

	* mpiutil.c: Remove memory.h.

2008-12-05  Werner Koch  <wk@g10code.com>

	* mpicoder.c (mpi_read_from_buffer): Do not bail out if the mpi is
	larger than the buffer (potential problem).  Do not print error
	messages.
	(mpi_fromstr): Return an error instead of hitting an assert.
	(gcry_mpi_scan) <PGP>: Fix potential double free problem.
	(gcry_mpi_scan) <HEX>: Fix potential memory leak.
	(do_get_buffer): Return NULL on memory allocation failure.
	(gcry_mpi_print): Check result of do_get_buffer.
	(gcry_mpi_aprint): Return error on a memory allocation failure.

	* mpicoder.c: Re-indent.

2008-12-03  Werner Koch  <wk@g10code.com>

	* mpi-pow.c (gcry_mpi_powm): Fix last change.  Asserts are really
	useful!

2008-12-02  Werner Koch  <wk@g10code.com>

	* mpi-pow.c (gcry_mpi_powm): Re-indent.
	(gcry_mpi_powm): Simplified allocation of the result to fix a
	double free bug.  This is bug#977.  Reported by Haakon Ringberg.

2008-08-20  Werner Koch  <wk@g10code.com>

	* mpi-bit.c (gcry_mpi_lshift): Actually implement.

2008-08-19  Werner Koch  <wk@g10code.com>

	* mpi-bit.c (gcry_mpi_lshift): New.

2007-10-31  Werner Koch  <wk@g10code.com>

	* mpi-mod.c (gcry_mpi_mod): Remove
	* mpi-inv.c (_gcry_mpi_invm): Remove _ prefix.
	* mpiutil.c (_gcry_mpi_swap): Remove.
	(_gcry_mpi_new): Remove.
	(_gcry_mpi_snew): Remove.
	(gcry_mpi_invm): Remove.
	(gcry_mpi_copy): Remove and rename _version to this.
	(gcry_mpi_set, gcry_mpi_set_ui): Merge with _ version.
	* mpi-inv.c (gcry_mpi_invm): Remove _ prefix and return 1.
	* mpi-mul.c (gcry_mpi_mul_2exp): Remove and rename _ version to this.

2007-10-29  Werner Koch  <wk@g10code.com>

	* config.links: No Candadian Cross here, thus use $host instead of
	$target.  
