@@ -1,3 +1,8 @@
+2010-02-22  Aurelien Jarno <aurel32@debian.org>  (wk)
+
+	* longlong.h (umul_ppmm) <mips> [__GNUC__ >= 4.4]: Patch according
+	to recommended gcc 4.4 changes.
+
 2009-12-09  Werner Koch  <wk@g10code.com>
 
 	* config.links: Remove asm modules for all sparc64.  This is
